--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,12 @@
     }
   }
 
+function refreshAll() {
+loadData();
+}
+
+refreshAll();
+
   setInterval(fetchData, 3000); // every 3 seconds
   fetchData(); // run once at start
 </script>
